# g2-aimd

./: CMakeLists.txt
common/: meta.h
